--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
-<html>
-<head>
-<meta charset="utf-8">
-<title>portfolio during highschool</title>
-</head>
-<body>
-    <h1>高校美術の記録</h1>
-    <p>高校2年ワイ、パワポでポートフォリオを作成。アレンジや</p>
-</body>
+<html lang = "ja">
+    <head>
+        <title>テストの文章だよ～</title>
+        <meta charset="UTF-8">
+    </head>
+    <body>
+        <h1>
+            ここがh1だよ
+        </h1>
+        <p>
+            ここは
+            普通に改行できる
+        </p>
+    </body>
 </html>
