--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang = "ja">
     <head>
-        <title>美術のポートフォリオ</title>
+        <title>Artworks During Highschool</title>
         <meta charset="UTF-8">
     </head>
     <body>
         <h1>
-            高校美術の記録
+            Artworks During Highschool
         </h1>
         <p>
-            わー
+            以前制作したポートフォリオのサイト版です。
         </p>
     </body>
 </html>
