--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Artworks During Highschool</title>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href=".css">
+        <link rel="stylesheet" href="stylesheet.css" type="text/css" media="all">
     </head>
     <body>
         <h1>
