--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Artworks During Highschool</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="stylesheet.css" type="text/css" media="all">
+        <link href="https://fonts.googleapis.com/css2?family=Baumans&display=swap" rel="stylesheet">
     </head>
     <body>
         <h1>
