--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Baumans&display=swap" rel="stylesheet">
     </head>
     <body>
-        <h1>
+        <h1 style="text-align:center">
             Artworks During Highschool
         </h1>
         <p>
