--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
             Artworks During Highschool
         </h1>
         <p>
-            以前制作したポートフォリオのサイト版です。
+            高校の美術で制作した作品集です。
         </p>
+        <h2><b>2022年度 高校1年</b></h2>
+        <h3>写真コラージュ</h3>
+        <h3>タロットカード</h3>
+        <h3>アニメーション</h3>
+        <h2><b>2023年度 高校2年</b></h2>
+        <h3>鉛筆デッサン</h3>
+        <h3>グラスリッツェン</h3>
+        <h3>コラージュ水彩画</h3>
     </body>
 </html>
