--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@
         <h1 style="text-align:center">
             Artworks During Highschool
         </h1>
-        <p>
-            高校の美術で制作した作品集です。
+        <p style="txt-align:center">
+            高校2年の時、美術の授業でポートフォリオを作成しました。<br>
+            当時はパワーポイント形式でした。
         </p>
-        <h2><b>2022年度 高校1年</b></h2>
-        <h3>写真コラージュ</h3>
-        <h3>タロットカード</h3>
-        <h3>アニメーション</h3>
-        <h2><b>2023年度 高校2年</b></h2>
-        <h3>鉛筆デッサン</h3>
-        <h3>グラスリッツェン</h3>
-        <h3>コラージュ水彩画</h3>
+        <h2 style="txt-align:center"><b>2022年度 高校1年</b></h2>
+        <h4 style="txt-align:left">写真コラージュ</h4>
+        <h4 style="txt-align:right">タロットカード</h4>
+        <h4 style="txt-align:left">アニメーション</h4>
+        <h2 style="txt-align:center"><b>2023年度 高校2年</b></h2>
+        <h4 style="txt-align:left">鉛筆デッサン</h4>
+        <h4 style="txt-align:right">グラスリッツェン</h4>
+        <h4 style="txt-align:left">コラージュ水彩画</h4>
     </body>
 </html>
