--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </h1>
         <p style="text-align:center">
             高校2年の時、美術の授業でポートフォリオを作成しました。<br>
-            当時はパワーポイント形式でした。
+            そのWebサイト版です。
         </p>
         <h2 style="text-align:center"><b>2022年度 高校1年</b></h2>
         <h4 style="text-align:left">写真コラージュ</h4>
