--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </p>
         <h2 style="text-align:center"><b>2022年度 高校1年</b></h2>
         <h4 style="text-align:left">写真コラージュ</h4>
-        <h4 style="text-align:right">タロットカード</h4>
+        <img src="タロットカード.jpg" alt="タロットカード" align="left" width="300" height="500"> <h4 style="text-align:right">タロットカード</h4>
         <h4 style="text-align:left">アニメーション</h4>
         <h2 style="text-align:center"><b>2023年度 高校2年</b></h2>
         <img src="鉛筆デッサン.jpg" alt="鉛筆デッサン" align="right" width="500" height="300"> <h4 style="text-align:left">鉛筆デッサン</h4>
