--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h4 style="text-align:left">アニメーション</h4>
         <h2 style="text-align:center"><b>2023年度 高校2年</b></h2>
         <img src="鉛筆デッサン.jpg" alt="鉛筆デッサン" align="right" width="500" height="300"> <h4 style="text-align:left">鉛筆デッサン</h4>
-        <img src="グラスリッツェン.jpg" alt="グラスリッツェン" align="left" width="500" height="300"> <h4 style="text-align:right">グラスリッツェン> </h4>
+        <img src="グラスリッツェン.jpg" alt="グラスリッツェン" align="left" width="500" height="300"> <h4 style="text-align:right"グラスリッツェン> </h4>
         <h4 style="text-align:left">コラージュ水彩画</h4>
     </body>
 </html>
