--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             Artworks During Highschool
         </h1>
         <p style="text-align:center">
-            高校2年の時、美術の授業でポートフォリオを作成しました。<br>
-            そのWebサイト版です。
+            The portfolio powerpoint file which I created for my fine arts class <br>
+            Website ver.
         </p>
         <h2 style="text-align:center"><b>2022年度 高校1年</b></h2>
         <h4 style="text-align:left">写真コラージュ</h4>
