--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             Artworks During Highschool
         </h1>
         <p style="text-align:center">
-            The portfolio powerpoint file which I created for my fine arts class <br>
+            The portfolio which I created for my fine arts class two years ago<br>
             Website ver.
         </p>
         <h2 style="text-align:center"><b>2022年度 高校1年</b></h2>
