--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
             The portfolio which I created for my fine arts class two years ago<br>
             Website ver.
         </p>
-        <h2 style="text-align:center"><b>2022年度 高校1年</b></h2>
-        <h4 style="text-align:left">写真コラージュ</h4>
-        <img src="タロットカード.jpg" alt="タロットカード" align="left" width="300" height="500"> <h4 style="text-align:right">タロットカード</h4>
-        <h4 style="text-align:left">アニメーション</h4>
-        <h2 style="text-align:center"><b>2023年度 高校2年</b></h2>
-        <img src="鉛筆デッサン.jpg" alt="鉛筆デッサン" align="right" width="500" height="300"> <h4 style="text-align:left">鉛筆デッサン</h4>
-        <img src="グラスリッツェン.jpg" alt="グラスリッツェン" align="left" width="500" height="300"> <h4 style="text-align:right"グラスリッツェン> </h4>
-        <h4 style="text-align:left">コラージュ水彩画</h4>
+        <h2 style="text-align:center"><b>2022 April~ 1st year</b></h2>
+        <h4 style="text-align:left">Image Collage</h4>
+        <img src="タロットカード.jpg" alt="タロットカード" align="left" width="300" height="500"> <h4 style="text-align:right">Tarot Card Design</h4>
+        <h4 style="text-align:left">Animation</h4>
+        <h2 style="text-align:center"><b>2023 April~ 2nd year</b></h2>
+        <img src="鉛筆デッサン.jpg" alt="鉛筆デッサン" align="right" width="500" height="300"> <h4 style="text-align:left">Pencil Drawing</h4>
+        <img src="グラスリッツェン.jpg" alt="グラスリッツェン" align="left" width="500" height="300"> <h4 style="text-align:right"グラスリッツェン>Grasritzen</h4>
+        <h4 style="text-align:left">collage watercolor</h4>
     </body>
 </html>
