--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </p>
         <h2 style="text-align:center"><b>2022 April~ 1st year</b></h2>
         <h4 style="text-align:left">Image Collage</h4>
-        <img src="タロットカード.jpg" alt="タロットカード" align="left" width="300" height="500"> <h4 style="text-align:right">Tarot Card Design</h4>
+        <img src="タロットカード.jpg" alt="タロットカード" align="left" width="300" height="500"> <h4 style="text-align:right">Tarot Card Design</h4>
         <h4 style="text-align:left">Animation</h4>
         <h2 style="text-align:center"><b>2023 April~ 2nd year</b></h2>
         <img src="鉛筆デッサン.jpg" alt="鉛筆デッサン" align="right" width="500" height="300"> <h4 style="text-align:left">Pencil Drawing</h4>
