--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
             Website ver.
         </p>
         <h2 style="text-align:center"><b>2022 April~ 1st year</b></h2>
+        <div class="flex">
+            <figure class="image"><img src="タロットカード.jpg" alt="tarot card"></figure>
+            <div class="right">
+                <p class="title">tarot card</p>
+            </div>
+        </div>
+
         <h4 style="text-align:left">Image Collage</h4>
         <img src="タロットカード.jpg" alt="タロットカード" align="left" width="366" height="512"> <h4 style="text-align:right">Tarot Card Design</h4>
         <h4 style="text-align:left">Animation</h4>
