--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </p>
         <h2 style="text-align:center"><b>2022 April~ 1st year</b></h2>
         <div class="flex">
-            <figure class="image"><img src="タロットカード.jpg" alt="tarot card"></figure>
+            <figure class="image"><img src="タロットカード.jpg" alt="tarot card" width="366" height="512"></figure>
             <div class="right">
                 <p class="title">tarot card</p>
             </div>
