--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h2 style="text-align:center"><b>2022 April~ 1st year</b></h2>
         <div class="flex">
             <figure class="image"><img src="タロットカード.jpg" alt="tarot card" width="366" height="512"></figure>
-            <p class="title">tarot card</p>
+            <p class="title">tarot card design</p>
         </div>
 
         <h4 style="text-align:left">Image Collage</h4>
