--- a/index.html
+++ b/index.html
@@ -15,9 +15,17 @@
             Website ver.
         </p>
         <h2 style="text-align:center"><b>2022 April~ 1st year</b></h2>
-        <div class="flex">
-            <figure class="image"><img src="タロットカード.jpg" alt="tarot card" width="366" height="512"></figure>
-            <p class="title">tarot card design</p>
+        <div class="item">
+            <img src="グラスリッツェン.jpg" alt="">
+            <p>ここに文章が入ります。</p>
+        </div>
+        <div class="item">
+            <img src="鉛筆デッサン.jpg" alt="">
+            <p>ここに文章が入ります。</p>
+        </div>
+        <div class="item">
+            <img src="タロットカード.jpg" alt="">
+            <p>ここに文章が入ります。</p>
         </div>
 
         <h4 style="text-align:left">Image Collage</h4>
