--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <img src="グラスリッツェン.jpg" alt="">
             <p>ここに文章が入ります。</p>
         </div>
-        <div class="item">
+        <div class="item reverse">
             <img src="鉛筆デッサン.jpg" alt="">
             <p>ここに文章が入ります。</p>
         </div>
