--- a/index.html
+++ b/index.html
@@ -13,19 +13,35 @@
         <p style="text-align:center">
             The portfolio which I created for my fine arts class two years ago<br>
             Website ver.
+            Click on pictures for details
         </p>
         <h2 style="text-align:center"><b>2022 April~ 1st year</b></h2>
         <div class="item">
-            <img src="グラスリッツェン.jpg" alt="">
-            <p>ここに文章が入ります。</p>
+            <img src="タロットカード.jpg" alt="タロットカード">
+            <p>Tarot Card Design</p>
         </div>
         <div class="item reverse">
-            <img src="鉛筆デッサン.jpg" alt="">
-            <p>ここに文章が入ります。</p>
+            <img src="鉛筆デッサン.jpg" alt="アニメーション">
+            <p>Cat Animation</p>
         </div>
         <div class="item">
-            <img src="タロットカード.jpg" alt="">
-            <p>ここに文章が入ります。</p>
+            <img src="グラスリッツェン.jpg" alt="４コマ漫画">
+            <p>For-panel Comics</p>
+            <p class="omake">(extracurricular activity)</p>
         </div>
+        <h2 style="text-align:center"><b>2023 April~ 2nd year</b></h2>
+        <div class="item reverse">
+            <img src="鉛筆デッサン.jpg" alt="鉛筆デッサン">
+            <p>Pencil Drawing</p>
+        </div>
+        <div class="item">
+            <img src="グラスリッツェン.jpg" alt="グラスリッツェン">
+            <p>Graslitzen</p>
+        </div>
+        <div class="item reverse">
+            <img src="グラスリッツェン.jpg" alt="コラージュ水彩画">
+            <p>Collage & Watercolor</p>
+        </div>
+        
     </body>
 </html>
