--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <p>Cat Animation</p>
         </div>
         <div class="item">
-            <img src="グラスリッツェン.jpg" alt="４コマ漫画">
+            <img src="ninjaIPA.png" alt="４コマ漫画">
             <p>For-panel Comics</p>
         </div>
         <h2 style="text-align:center"><b>2023 April~ 2nd year</b></h2>
