--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <p>Graslitzen</p>
         </div>
         <div class="item reverse">
-            <img src="グラスリッツェン.jpg" alt="コラージュ水彩画">
+            <img src="collagewater.jpg" alt="コラージュ水彩画">
             <p>Collage & Watercolor</p>
         </div>
         
