--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <p>Tarot Card Design</p>
         </div>
         <div class="item reverse">
-            <img src="鉛筆デッサン.jpg" alt="アニメーション">
+            <img src="どこ猫１.png" alt="アニメーション">
             <p>Cat Animation</p>
         </div>
         <div class="item">
