--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
         <link href="https://fonts.googleapis.com/css2?family=Baumans&display=swap" rel="stylesheet">
     </head>
     <body>
-        <h1 style="text-align:center">
-            Artworks During Highschool
-        </h1>
-        <p style="text-align:center">
-            The portfolio which I created for my fine arts class two years ago<br>
-            Website ver.
-            Click on pictures for details
-        </p>
+        <div class="banner">
+            <h1 style="text-align:center">
+                Artworks During Highschool
+            </h1>
+            <p style="text-align:center">
+                The portfolio which I created for my fine arts class two years ago Website ver.<br>
+                Click on pictures for details.
+            </p>
+        </div>
         <h2 style="text-align:center"><b>2022 April~ 1st year</b></h2>
         <div class="item">
             <img src="タロットカード.jpg" alt="タロットカード">
