--- a/index.html
+++ b/index.html
@@ -42,6 +42,6 @@
             <img src="collagewater.jpg" alt="コラージュ水彩画">
             <p>Collage & Watercolor</p>
         </div>
-        
+        <h3 style="text-align:center">presented by HARUKA ISHII from Ochanomizu University High School</h3>
     </body>
 </html>
