--- a/tarot.html
+++ b/tarot.html
@@ -1,1 +1,12 @@
-
+<!DOCTYPE html>
+<html lang = "ja">
+    <head>
+        <title>Artworks During Highschool</title>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="stylesheet.css" type="text/css" media="all">
+        <link href="https://fonts.googleapis.com/css2?family=Baumans&display=swap" rel="stylesheet">
+    </head>
+    <body>
+      <p>あああああ</p>
+    </body>
+</html>
