--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
         </div>
         <h2 style="text-align:center"><b>2022 April~ 1st year</b></h2>
         <div class="item">
-            <img src="タロットカード.jpg" alt="タロットカード">
-            <p>Tarot Card Design</p>
+            <a href="work1.html">
+                <img src="タロットカード.jpg" alt="タロットカード">
+            </a>
+            <p>Tarot Card Design</p>    
         </div>
         <div class="item reverse">
             <img src="どこ猫１.png" alt="アニメーション">
