--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <h2 style="text-align:center"><b>2022 April~ 1st year</b></h2>
         <div class="item">
-            <a href="work1.html">
+            <a href="tarot.html">
                 <img src="タロットカード.jpg" alt="タロットカード">
             </a>
             <p>Tarot Card Design</p>    
