--- a/tarot.html
+++ b/tarot.html
@@ -7,6 +7,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Baumans&display=swap" rel="stylesheet">
     </head>
     <body>
-      <p>あああああ</p>
+       <img src="タロットカード.jpg" alt="タロットカード">
+            </a>
+            <h3>タロットカードや！</h3>    
     </body>
 </html>
