--- a/tarot.html
+++ b/tarot.html
@@ -7,6 +7,11 @@
         <link href="https://fonts.googleapis.com/css2?family=Baumans&display=swap" rel="stylesheet">
     </head>
     <body>
+         <div class="banner">
+            <h1 style="text-align:center">
+                Artworks During Highschool
+            </h1>
+         </div>
        <img src="タロットカード.jpg" alt="タロットカード">
             </a>
             <h3>タロットカードや！</h3>    
