--- a/tarot.html
+++ b/tarot.html
@@ -12,7 +12,9 @@
                 Artworks During Highschool
             </h1>
          </div>
-       <img src="タロットカード.jpg" alt="タロットカード">
-            <h3>タロットカードや！</h3>    
+        <div class="work">
+            <img src="タロットカード.jpg" alt="タロットカード">
+            <h3>タロットカードや！</h3>
+        </div>
     </body>
 </html>
