--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
     </head>
     <body>
         <div class="banner">
-            <h1 style="text-align:center">
-                Artworks During Highschool
-            </h1>
-            <p style="text-align:center">
-                The portfolio which I created for my fine arts class two years ago Website ver.<br>
-                Click on pictures for details.
-            </p>
+            <a href="index.html">
+                <h1 style="text-align:center">
+                    Artworks During Highschool
+                </h1>
+                <p style="text-align:center">
+                    The portfolio which I created for my fine arts class two years ago Website ver.<br>
+                    Click on pictures for details.
+                </p>
+            </a>
         </div>
         <h2 style="text-align:center"><b>2022 April~ 1st year</b></h2>
         <div class="item">
