--- a/tarot.html
+++ b/tarot.html
@@ -8,9 +8,12 @@
     </head>
     <body>
          <div class="banner">
-            <h1 style="text-align:center">
-                Artworks During Highschool
-            </h1>
+             <a href="index.html">
+                 <h1 style="text-align:center">
+                     Artworks During Highschool
+                 </h1>
+                 <p>トップに戻る</p>
+             </a>
          </div>
         <div class="work">
             <img src="タロットカード.jpg" alt="タロットカード">
