--- a/tarot.html
+++ b/tarot.html
@@ -12,7 +12,7 @@
                  <h1 style="text-align:center">
                      Artworks During Highschool
                  </h1>
-                 <p>トップに戻る</p>
+                 <p style="text-align:center">トップに戻る</p>
              </a>
          </div>
         <div class="work">
