--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
             <p>Tarot Card Design</p>    
         </div>
         <div class="item reverse">
-            <img src="どこ猫１.png" alt="アニメーション">
+            <a href="Animation.html">
+                <img src="どこ猫１.png" alt="アニメーション">
+            </a>
             <p>Cat Animation</p>
         </div>
         <div class="item">
