--- a/Animation.html
+++ b/Animation.html
@@ -16,7 +16,7 @@
              </a>
          </div>
         <div class="work">
-            <img src="タロットカード.jpg" alt="タロットカード">
+            <video src="1U06石井明香どこにでもいるねこ (1).mp4" controls></video>
             <h3>猫アニメや！</h3>
         </div>
     </body>
