--- a/Forpanelcomic.html
+++ b/Forpanelcomic.html
@@ -16,7 +16,7 @@
              </a>
          </div>
         <div class="work">
-            <img src="タロットカード.jpg" alt="タロットカード">
+            <img src="ninjaIPA.png" alt="４コマ漫画">
             <h3>4コマ漫画や！</h3>
         </div>
     </body>
