--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
             <p>Cat Animation</p>
         </div>
         <div class="item">
-            <img src="ninjaIPA.png" alt="４コマ漫画">
+            <a href="tarot.html">
+                <img src="ninjaIPA.png" alt="４コマ漫画">
+            </a>
             <p>For-panel Comics</p>
         </div>
         <h2 style="text-align:center"><b>2023 April~ 2nd year</b></h2>
