--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <p>Cat Animation</p>
         </div>
         <div class="item">
-            <a href="tarot.html">
+            <a href="Forpanelcomic.html">
                 <img src="ninjaIPA.png" alt="４コマ漫画">
             </a>
             <p>For-panel Comics</p>
