--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 </h1>
                 <p style="text-align:center">
                     The portfolio which I created for my fine arts class two years ago Website ver.<br>
-                    Click on pictures for details.
+                    Click on images for details.
                 </p>
             </a>
         </div>
