--- a/Pencildraw.html
+++ b/Pencildraw.html
@@ -1,1 +1,23 @@
-
+<!DOCTYPE html>
+<html lang = "ja">
+    <head>
+        <title>Artworks During Highschool</title>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="stylesheet.css" type="text/css" media="all">
+        <link href="https://fonts.googleapis.com/css2?family=Baumans&display=swap" rel="stylesheet">
+    </head>
+    <body>
+         <div class="banner">
+             <a href="index.html">
+                 <h1 style="text-align:center">
+                     Artworks During Highschool
+                 </h1>
+                 <p style="text-align:center">トップに戻る</p>
+             </a>
+         </div>
+        <div class="work">
+            <img src="ninjaIPA.png" alt="４コマ漫画">
+            <h3>鉛筆デッサンや！</h3>
+        </div>
+    </body>
+</html>
