--- a/Pencildraw.html
+++ b/Pencildraw.html
@@ -16,7 +16,7 @@
              </a>
          </div>
         <div class="work">
-            <img src="ninjaIPA.png" alt="４コマ漫画">
+            <img src="鉛筆デッサン.jpg" alt="鉛筆デッサン">
             <h3>鉛筆デッサンや！</h3>
         </div>
     </body>
