--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
         </div>
         <h2 style="text-align:center"><b>2023 April~ 2nd year</b></h2>
         <div class="item reverse">
-            <img src="鉛筆デッサン.jpg" alt="鉛筆デッサン">
+            <a href="Pencildraw.html">
+                <img src="鉛筆デッサン.jpg" alt="鉛筆デッサン">
+            </a>
             <p>Pencil Drawing</p>
         </div>
         <div class="item">
