--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
         <div class="item">
             <img src="グラスリッツェン.jpg" alt="グラスリッツェン">
-            <p>Graslitzen</p>
+            <p>Glaslitzen</p>
         </div>
         <div class="item reverse">
             <img src="collagewater.jpg" alt="コラージュ水彩画">
