--- a/Glaslitzen.html
+++ b/Glaslitzen.html
@@ -16,7 +16,7 @@
              </a>
          </div>
         <div class="work">
-            <img src="鉛筆デッサン.jpg" alt="グラスリッツェン">
+            <img src="グラスリッツェン.jpg" alt="グラスリッツェン">
             <h3>グラスリッツェンや！</h3>
         </div>
     </body>
