--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
             <p>Pencil Drawing</p>
         </div>
         <div class="item">
-            <img src="グラスリッツェン.jpg" alt="グラスリッツェン">
+            <a href="Glaslitzen.html">
+                <img src="グラスリッツェン.jpg" alt="グラスリッツェン">
+            </a>
             <p>Glaslitzen</p>
         </div>
         <div class="item reverse">
