--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
             <p>Glaslitzen</p>
         </div>
         <div class="item reverse">
-            <img src="collagewater.jpg" alt="コラージュ水彩画">
+            <a href="watercolor.html">
+                <img src="collagewater.jpg" alt="コラージュ水彩画">
+            </a>
             <p>Collage & Watercolor</p>
         </div>
         <h3 style="text-align:center">presented by HARUKA ISHII from Ochanomizu University High School</h3>
