--- a/watercolor.html
+++ b/watercolor.html
@@ -16,7 +16,7 @@
              </a>
          </div>
         <div class="work">
-            <img src="グラスリッツェン.jpg" alt="コラージュ水彩画">
+            <img src="collagewater.jpg" alt="コラージュ水彩画">
             <h3>コラージュ水彩や！</h3>
         </div>
     </body>
