--- a/tarot.html
+++ b/tarot.html
@@ -17,11 +17,13 @@
          </div>
         <div class="work">
             <img src="タロットカード.jpg" alt="タロットカード">
-            <h1>タロットカードデザイン</h1>
-            <p>運命の輪（Wheel of fortune）を題材に、タロットカードのデザインを作成した。<br>
-                画面内にはカジノのテーブル、メダル、ルーレットに加え、幸運や運命に関するアイテムが配置されている。<br>
-                フレーム部分はスマートフォンゲーム「Fate/Grand Order」のキャラクターフレームを参考にした。<br>
-                デザイン作成はAdobe Photoshopを用い、水彩色鉛筆で着彩を行った。</p>
+            <div class="right">
+                <h1 class="title">タロットカードデザイン</h1>
+                <p class="text">運命の輪（Wheel of fortune）を題材に、タロットカードのデザインを作成した。<br>
+                    画面内にはカジノのテーブル、メダル、ルーレットに加え、幸運や運命に関するアイテムが配置されている。<br>
+                    フレーム部分はスマートフォンゲーム「Fate/Grand Order」のキャラクターフレームを参考にした。<br>
+                    デザイン作成はAdobe Photoshopを用い、水彩色鉛筆で着彩を行った。</p>
+            </div>
         </div>
     </body>
 </html>
