--- a/Animation.html
+++ b/Animation.html
@@ -17,8 +17,14 @@
          </div>
         <div class="work">
             <video src="1U06石井明香どこにでもいるねこ (1).mp4" controls></video>
-            <h1>どこにでもいるねこ</h1>
-            <p></p>
+             <div class="right">
+                <h1 class="title">どこにでもいるねこ</h1>
+                <p class="text">校内の写真を背景に、白いネコが動き回る動画。ストーリー性はない。<br>
+                    キーフレームを作って中継ぎを埋める方式ではなく、一枚一枚前のフレームを透過させて描いた。<br>
+                    3DSのうごくメモ帳で遊んだ経験が予備動作を踏まえた自然な動き作りに貢献したと思われる。<br>
+                    Adobe animateでアニメーションを作り、字幕はPremiere Proで挿入した。<br>
+                </p>
+            </div>
         </div>
     </body>
 </html>
