--- a/tarot.html
+++ b/tarot.html
@@ -18,7 +18,7 @@
         <div class="work">
             <img src="タロットカード.jpg" alt="タロットカード">
             <div class="right">
-                <h1 class="title">タロットカードデザイン</h1>
+                <h1 class="title">10:運命の輪</h1>
                 <p class="text">運命の輪（Wheel of fortune）を題材に、タロットカードのデザインを作成した。<br>
                     画面内にはカジノのテーブル、メダル、ルーレットに加え、幸運や運命に関するアイテムが配置されている。<br>
                     フレーム部分はスマートフォンゲーム「Fate/Grand Order」のキャラクターフレームを参考にした。<br>
