--- a/Forpanelcomic.html
+++ b/Forpanelcomic.html
@@ -17,7 +17,14 @@
          </div>
         <div class="work">
             <img src="ninjaIPA.png" alt="４コマ漫画">
-            <h1>4コマ漫画や！</h1>
+            <div class="right">
+                <h1 class="title">映り込み</h1>
+                <p class="text">課題研究基礎・情報分野の夏休みの宿題として、IPAの「ひろげよう情報モラルセキュリティコンクール」の4コマ漫画部門に投稿した。<br>
+                    優秀賞をいただき、<a href="https://www.fz.ocha.ac.jp/fk/commendation/d010878.html">高校のウェブサイト</a>に名前が載ることとなった。<br>
+                    メッセージとモチーフを決め、ネタ出しを行った。<br>
+                    Medibang Paintで作画と着彩を行い、文字も手書きで追加した。
+                </p>
+            </div>
         </div>
     </body>
 </html>
