--- a/Glaslitzen.html
+++ b/Glaslitzen.html
@@ -17,7 +17,14 @@
          </div>
         <div class="work">
             <img src="グラスリッツェン.jpg" alt="グラスリッツェン">
-            <h1>グラスリッツェンや！</h1>
+            <div class="right">
+                <h1 class="title">うごくねこグラス</h1>
+                <p class="text">グラスリッツェンとは、ガラスの表面にダイヤモンドポイントペンで傷をつけて絵を描く技術、並びにその作品である。<br>
+                    回して楽しめるデザインにするため、壁面を三分割してフィルム風にした。<br>
+                    雪山の背景を繋げつつ、針葉樹や山小屋などの小物で情報を増やした。<br>
+                    写真はないが底面にもネコがおり、不透明な飲み物の場合は飲み終わった時に顔が見えるようになっている。
+                </p>
+            </div>
         </div>
     </body>
 </html>
