--- a/watercolor.html
+++ b/watercolor.html
@@ -16,8 +16,17 @@
              </a>
          </div>
         <div class="work">
-            <img src="collagewater.jpg" alt="コラージュ水彩画">
-            <h1>コラージュ水彩や！</h1>
+            <img src="collagewater.jpg" alt="コラージュ画">
+            <div class="right">
+                <h1 class="title">むこうがわ</h1>
+                <p class="text">画面内には巨大なネコ、和風の家、口から潮を吹くたい焼き、ほうれん草、交通標識、逆さの神殿、賽の河原の石積みが置かれている。<br>
+                    ウユニ塩湖（ボリビア）や伏魔御厨子（呪術廻戦）の影響を受けており、水面に建造物が反射する様子を丁寧に描いた。<br>
+                    タイトルは妖怪ウォッチ2のえんえんトンネルを抜けた先にある場所から拝借している。<br>
+                    授業テーマは「コラージュ画像を作成し、自分で描くこと」だったため、Photoshopで画像を組み合わせ、キャンバスに転写してアクリル絵の具で着彩した。<br>
+                    
+                    
+                </p>
+            </div>
         </div>
     </body>
 </html>
