--- a/index.html
+++ b/index.html
@@ -57,5 +57,6 @@
             <p>Collage & Watercolor</p>
         </div>
         <h3 style="text-align:center">presented by HARUKA ISHII from Ochanomizu University High School</h3>
+        <!--一応隠しリンク作りました-->
     </body>
 </html>
