--- a/omake.html
+++ b/omake.html
@@ -1,1 +1,30 @@
-
+<!DOCTYPE html>
+<html lang = "ja">
+    <head>
+        <title>Artworks During Highschool</title>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="stylesheet.css" type="text/css" media="all">
+        <link href="https://fonts.googleapis.com/css2?family=Baumans&display=swap" rel="stylesheet">
+    </head>
+    <body>
+         <div class="banner">
+             <a href="index.html">
+                 <h1 style="text-align:center">
+                     Artworks During Highschool
+                 </h1>
+                 <p style="text-align:center">トップに戻る</p>
+             </a>
+         </div>
+        <div class="work">
+            <img src="" controls>
+             <div class="right">
+                <h1 class="title">おまけ</h1>
+                <p class="text">自分の高校はPC室の全てのPCにAdobeのライセンスが入っていて、授業でも部活でも私用でも好き勝手に使えるのが良かったです。<br>
+                  2年に上がるタイミングで美術の先生が変わったのですが、どちらもとても面白い方でした。<br>
+                  高三になってからは美術Ⅲの実施時間と自分の受験科目の時間が噛み合わず履修できなかったのですが、三年間通しても美術が一番楽しかったんじゃないかと思います。2番手は体育。<br>
+                  本当に良い高校に通えました。
+                </p>
+            </div>
+        </div>
+    </body>
+</html>
