--- a/omake.html
+++ b/omake.html
@@ -16,7 +16,7 @@
              </a>
          </div>
         <div class="work">
-            <img src="マッスル１.png">
+            <img src="マッスル１.png" alt="マッスル映画泥棒">
              <div class="right">
                 <h1 class="title">おまけ</h1>
                 <p class="text">自分の高校はPC室の全てのPCにAdobeのライセンスが入っていて、授業でも部活でも私用でも好き勝手に使えるのが良かったです。<br>
