--- a/Pencildraw.html
+++ b/Pencildraw.html
@@ -19,7 +19,7 @@
             <img src="鉛筆デッサン.jpg" alt="鉛筆デッサン">
              <div class="right">
                 <h1 class="title">昼の公園</h1>
-                <p class="text">美術室に置いてあった軍手、サングラスらしきもの、陶器のコップ、バラの造花に加え、友人の長い時計、持参したトゲトゲのボールが椅子の上に置かれている。<br>
+                <p class="text"><a href="omake.html">美術</a>室に置いてあった軍手、サングラスらしきもの、陶器のコップ、バラの造花に加え、友人の長い時計、持参したトゲトゲのボールが椅子の上に置かれている。<br>
                     軍手の布と陶器の質感の差やトゲトゲの表現にはかなりこだわっている。
                     五種類ほどの濃さの鉛筆を使い分け、薄く柔らかいタッチで形を取ってから濃く影をつけていくことを意識した。
                 </p>
