--- a/omake.html
+++ b/omake.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang = "ja">
     <head>
-        <title>Artworks During Highschool</title>
+        <title>Extra Experience</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="stylesheet.css" type="text/css" media="all">
         <link href="https://fonts.googleapis.com/css2?family=Baumans&display=swap" rel="stylesheet">
