--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <a href="Forpanelcomic.html">
                 <img src="ninjaIPA.png" alt="４コマ漫画">
             </a>
-            <p>For-panel Comics</p>
+            <p>Four-panel Comics</p>
         </div>
         <h2 style="text-align:center"><b>2023 April~ 2nd year</b></h2>
         <div class="item reverse">
